dbus-daemon(1): Document max_connections_per_user as Unix-only
The limit is accepted on Windows, but not enforced.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/doc/dbus-daemon.1.xml.in
+++ b/doc/dbus-daemon.1.xml.in
@@ -791,7 +791,7 @@ Available limit names are:</para>
       "max_incomplete_connections" : max number of unauthenticated
                                      connections
       "max_connections_per_user"   : max number of completed connections from
-                                     the same user
+                                     the same user (only enforced on Unix OSs)
       "max_pending_service_starts" : max number of service launches in
                                      progress at the same time
       "max_names_per_connection"   : max number of names a single
