CI: Stop building on Ubuntu 14.04 'trusty'
The version of gcc in trusty is too old for AddressSanitizer, which we
want to be able to start using, and Travis-CI finally supports Ubuntu
16.04 'xenial' now. This lets us remove some workarounds, but we need
to update others.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@
 # SOFTWARE.
 
 sudo: required
-dist: trusty
+dist: xenial
 language: c
 script:
   - ./tools/ci-install.sh
@@ -39,7 +39,6 @@ env:
   - ci_host=i686-w64-mingw32 ci_buildsys=cmake ci_variant=debug
   - ci_host=x86_64-w64-mingw32 ci_variant=debug
   - ci_host=x86_64-w64-mingw32 ci_buildsys=cmake
-  - ci_docker=ubuntu:xenial ci_distro=ubuntu ci_suite=xenial
   - ci_docker=debian:jessie-slim ci_distro=debian ci_suite=jessie
   - ci_docker=debian:stretch-slim ci_distro=debian ci_suite=stretch
 
