CI: Start supporting Debian 10 'buster', currently under development
This gives us a way to build on a more recent host OS if we want to.
For Gitlab-CI it's disabled by default.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,5 +41,6 @@ env:
   - ci_host=x86_64-w64-mingw32 ci_buildsys=cmake
   - ci_docker=debian:jessie-slim ci_distro=debian ci_suite=jessie
   - ci_docker=debian:stretch-slim ci_distro=debian ci_suite=stretch
+  - ci_docker=debian:buster-slim ci_distro=debian ci_suite=buster
 
 # vim:set sw=2 sts=2 et:
