CI: Start supporting Debian 10 'buster', currently under development
This gives us a way to build on a more recent host OS if we want to.
For Gitlab-CI it's disabled by default.

Signed-off-by: Simon McVittie <smcv@collabora.com>
(cherry picked from commit 28c27349e252e33215e21b570d41853badd770ef)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,6 +127,14 @@ build:jessie:
     ci_suite: "jessie"
   script: *script
 
+build:buster:
+  when: manual
+  stage: build
+  image: "debian:buster-slim"
+  variables:
+    ci_suite: "buster"
+  script: *script
+
 build:xenial:
   when: manual
   stage: build
