doc: Don't include ChangeLog in dbus-docs.tar.xz
Signed-off-by: Simon McVittie <smcv@collabora.com>
Fixes: e93b421137493710cb6b81420d15928eb13014e3

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -149,7 +149,7 @@ BONUS_FILES = \
 	$(top_srcdir)/AUTHORS \
 	$(top_srcdir)/NEWS \
 	$(top_srcdir)/COPYING \
-	$(top_srcdir)/ChangeLog
+	$(NULL)
 
 dbus-docs: $(STATIC_DOCS) $(dist_dtd_DATA) $(MAN_XML_FILES) $(dist_doc_DATA) $(dist_html_DATA) $(MAN_HTML_FILES) $(BONUS_FILES) doxygen.stamp $(XMLTO_HTML) $(YELP_HTML)
 	$(AM_V_at)rm -rf $@ $@.tmp
