--- a/test/data/valid-service-files/org.freedesktop.DBus.TestSuite.PrivServer.service.in
+++ b/test/data/valid-service-files/org.freedesktop.DBus.TestSuite.PrivServer.service.in
@@ -1,4 +1,4 @@
 [D-BUS Service]
 Name=org.freedesktop.DBus.TestSuite.PrivServer
-Exec=@DBUS_NAME_TEST_EXEC@/test-privserver@EXEEXT@
+Exec=@DBUS_TEST_EXEC@/test-privserver@EXEEXT@
 
