.gitignore: Anchor patterns for files that are only at top level
There shouldn't be an aclocal.m4 in any subdirectory, for instance,
so there's no need to ignore it.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,25 +5,25 @@
 *~
 /.ccache/
 /build-aux/
-config.cache
-config.log
-config.status
-configure
+/config.cache
+/config.log
+/config.status
+/configure
 cscope.out
-*.pc
-libtool
+/*.pc
+/libtool
 /m4/lt*.m4
 /m4/libtool.m4
-stamp-h1
-stamp-h
-stamp-h.in
-Doxyfile
+/stamp-h1
+/stamp-h
+/stamp-h.in
+/Doxyfile
 Makefile
 Makefile.in
-aclocal.m4
-autom4te.cache
-config.h
-config.h.in
+/aclocal.m4
+/autom4te.cache
+/config.h
+/config.h.in
 *.bb
 *.bbg
 *.da
