.gitignore: Consolidate generic patterns at top level
Patterns in the top-level .gitignore match in all subdirectories, so
there's no need to repeat ourselves quite so much for generic
C, Autotools and gcov patterns.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,16 @@
 *.gcda
 *.gcno
 *.gcov
+*.la
+*.lo
 *.o
 *.orig
 *.rej
 *~
 .*.sw?
+.deps/
+.dirstamp
+.libs/
 Makefile
 Makefile.in
 cscope.out
