.gitignore: Make match patterns more specific
In subdirectories we mostly only want to match at the current level,
not in nested subdirectories.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -1,22 +1,22 @@
 *.1
 *.1.xml
 *.1.html
-api
+/api/
 /dbus.devhelp2
-dbus-specification.html
-dbus-test-plan.html
-dbus-tutorial.html
-dbus-faq.html
-dbus-docs
-dbus-docs.tar.xz
-doxygen.stamp
-dbus-api-design.page
-dbus-api-design.html
+/dbus-specification.html
+/dbus-test-plan.html
+/dbus-tutorial.html
+/dbus-faq.html
+/dbus-docs/
+/dbus-docs.tar.xz
+/doxygen.stamp
+/dbus-api-design.page
+/dbus-api-design.html
 /highlight.pack.js
-jquery.js
-jquery.syntax.brush.html.js
-jquery.syntax.core.js
-jquery.syntax.js
-jquery.syntax.layout.yelp.js
-yelp.js
-C.css
+/jquery.js
+/jquery.syntax.brush.html.js
+/jquery.syntax.core.js
+/jquery.syntax.js
+/jquery.syntax.layout.yelp.js
+/yelp.js
+/C.css
