--- a/test/data/valid-config-files/.gitignore
+++ b/test/data/valid-config-files/.gitignore
@@ -1,6 +1,20 @@
-debug-allow-all.conf
-debug-allow-all-sha1.conf
-incoming-limit.conf
-session.conf
-run-with-tmp-session-bus.conf
-finite-timeout.conf
+/as-another-user.conf
+/count-fds.conf
+/debug-allow-all.conf
+/debug-allow-all-sha1.conf
+/forbidding.conf
+/incoming-limit.conf
+/limit-containers.conf
+/max-completed-connections.conf
+/max-connections-per-user.conf
+/max-containers.conf
+/max-match-rules-per-connection.conf
+/max-names-per-connection.conf
+/max-replies-per-connection.conf
+/multi-user.conf
+/pending-fd-timeout.conf
+/session.conf
+/systemd-activation.conf
+/tmp-session.conf
+/run-with-tmp-session-bus.conf
+/finite-timeout.conf
