--- a/test/name-test/.gitignore
+++ b/test/name-test/.gitignore
@@ -1,9 +1,9 @@
-tmp-session-bus.*.conf
-test-ids
-test-names
-test-pending-call-dispatch
-test-pending-call-timeout
-test-privserver-client
-test-shutdown
-test-threads-init
-test-autolaunch
+/tmp-session-bus.*.conf
+/test-ids
+/test-names
+/test-pending-call-dispatch
+/test-pending-call-timeout
+/test-privserver-client
+/test-shutdown
+/test-threads-init
+/test-autolaunch
