--- a/test/.gitignore
+++ b/test/.gitignore
@@ -1,23 +1,23 @@
-test-bus
-test-spawn
-test-corrupt
-test-exit
-test-segfault
-test-service
-test-sleep-forever
-test-shell
-test-shell-service
-test-names
-test-loopback
-test-relay
-test-dbus-daemon
-test-marshal
-manual-authz
-manual-dir-iter
-manual-tcp
-test-dbus-daemon-eavesdrop
-test-printf
+/test-bus
+/test-spawn
+/test-corrupt
+/test-exit
+/test-segfault
+/test-service
+/test-sleep-forever
+/test-shell
+/test-shell-service
+/test-names
+/test-loopback
+/test-relay
+/test-dbus-daemon
+/test-marshal
+/manual-authz
+/manual-dir-iter
+/manual-tcp
+/test-dbus-daemon-eavesdrop
+/test-printf
 /test-privserver
-test-refs
-test-syntax
-test-syslog
+/test-refs
+/test-syntax
+/test-syslog
